feat(common, website, api-server): rewrite EncounterResult to not always use dice
`RollResult` vs `EncounterResult` is a website-only difference, for
display. In the game, an encounter result may or may not have dice
associated with it.

- Change types and enums about "roll result" to "encounter result",
everywhere those words are used
- Add jest to website and write a test just for a type predicate
- Rework website to handle EncounterResult that may or may not have dice
rolls associated with it: diceRollSlice -> encounterRollSlice; refactor
dice components and their stories
- Note: changes to api-server were just renaming, should be pure
refactor there
