# api-server/src/gameLogicLayer/encounterCardCheck.ts
@@ -1,0 +1,5 @@
+import { type EncounterResult } from '@solarpunk-drifters/common'
+
+export async function encounterCardCheck(): Promise<EncounterResult> {
+  throw new Error('not implemented')
+}
