# common/src/openapiTypes.ts
@@ -13,10 +13,10 @@ export type CharacterStats = components['schemas']['CharacterStats']
 
 export type ClientEvent = components['schemas']['ClientEvent']
 
-export type ClientEventRollResult =
-  components['schemas']['ClientEventRollResult']
-export const CLIENT_EVENT_ROLL_RESULT: ClientEventRollResult['type'] =
-  'CLIENT_EVENT_ROLL_RESULT'
+export type ClientEventEncounterResult =
+  components['schemas']['ClientEventEncounterResult']
+export const CLIENT_EVENT_ENCOUNTER_RESULT: ClientEventEncounterResult['type'] =
+  'CLIENT_EVENT_ENCOUNTER_RESULT'
 
 export type CoreGameState = components['schemas']['CoreGameState']
 
@@ -43,13 +43,14 @@ export type LoadoutGameState = Required<
 /** A JSON Patch (RFC 6902) for some JSON object. */
 export type PatchRequest = components['schemas']['PatchRequest']
 
-export type RollResult = components['schemas']['RollResult']
-export type RollResultOutcome = RollResult['outcome']
-export const ROLL_OUTCOME_FAILURE: RollResultOutcome = 'ROLL_OUTCOME_FAILURE'
-export const ROLL_OUTCOME_MIXED_SUCCESS: RollResultOutcome =
-  'ROLL_OUTCOME_MIXED_SUCCESS'
-export const ROLL_OUTCOME_STRONG_SUCCESS: RollResultOutcome =
-  'ROLL_OUTCOME_STRONG_SUCCESS'
+export type EncounterResult = components['schemas']['EncounterResult']
+export type EncounterOutcome = EncounterResult['outcome']
+export const ENCOUNTER_OUTCOME_FAILURE: EncounterOutcome =
+  'ENCOUNTER_OUTCOME_FAILURE'
+export const ENCOUNTER_OUTCOME_MIXED_SUCCESS: EncounterOutcome =
+  'ENCOUNTER_OUTCOME_MIXED_SUCCESS'
+export const ENCOUNTER_OUTCOME_STRONG_SUCCESS: EncounterOutcome =
+  'ENCOUNTER_OUTCOME_STRONG_SUCCESS'
 
 export type Skill = components['schemas']['Skill']
 
